squash! Fix: Se han añadido apellidos en el o-combo tutor del filtro

--- a/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/tutors/tutors-detail/tutors-detail.component.css
+++ b/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/tutors/tutors-detail/tutors-detail.component.css
@@ -1,89 +1,124 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-  }
-  
-  o-form {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-  }
-  
-  label {
-    display: block;
-    margin: 10px 0 10px 10px;
-    font-size: 15px;
-    font-weight: bold;
-  }
-  
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
+
+o-form {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+label {
+  display: block;
+  margin: 10px 0 10px 10px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.grid-container {
+  width: 96%;
+  margin: 5px auto;
+  background-color: #f5f0f2;
+  border-radius: 15px;
+  padding: 20px;
+  height: auto;
+}
+
+.general_table {
+  width: 98%;
+  margin: 0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 10px;
+  height: auto;
+}
+.general_table {
+  background-color: #f5f0f2;
+}
+
+.grid-container .table_container {
+  grid-column: 1 / 3;
+}
+
+.foto {
+  grid-column: 1 / 3;
+  /* Define la columna */
+  grid-row: 0;
+  /* Asegúrate de que esté en la fila 1 */
+  justify-self: center;
+  /* Centra horizontalmente */
+  align-self: center;
+  /* Centra verticalmente */
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1250px) {
+
   .grid-container,
   .table_container {
-    width: 96%;
-    margin: 5px auto;
-    background-color: #f5f0f2;
-    border-radius: 15px;
-    padding: 20px;
-    height: auto;
-  }
-  
-  .general_table{
-    width: 98%;
-    margin: 0;
+    width: 95%;
+    padding: 15px;
   }
 
   .grid-container {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    gap: 10px;
-    height: auto;
-  }
-  
-  .nombre {
-    grid-column: 1 / 2;
-  }
-  
-  .apellido {
-    grid-column: 2 / 3;
-  }
-  
-  .apellido2 {
-    grid-column: 1 / 2;
   }
 
-  .email{
-    grid-column: 2 / 3;
-  }
+}
 
-  .general_table {
-    background-color: #f5f0f2;
-  }
+.grid-container {
+  width: 96%;
+  margin: 5px auto;
+  background-color: #f5f0f2;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
+}
 
-  .grid-container .table_container{
-    grid-column: 1 / 3;
-  }
-  
-  .foto {
-    grid-column: 1 / 3;  /* Define la columna */
-    grid-row: 0;  /* Asegúrate de que esté en la fila 1 */
-    justify-self: center;  /* Centra horizontalmente */
-    align-self: center;  /* Centra verticalmente */
-    margin-bottom: 40px;
-  }
 
-  @media (max-width: 1250px) {
-    .grid-container,
-    .table_container {
-      width: 95%;
-      padding: 15px;
-    }
-  
-    .grid-container {
-      grid-template-columns: 1fr 1fr;
-    }
-  
+fieldset {
+  border-radius: 15px;
+  padding: 20px;
+  background-color: #f5f0f2;
+  border: solid 1px #ccc;
+  border-radius: 15px;
+  border: solid 1px;
+  padding-left: 20px;
+  padding-right: 20px
+}
 
-  }
-  
-  
-  
+.datos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  grid-column: 1/3;
+}
+
+.login {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  grid-column: 1/3;
+}
+.tabla {
+  display: grid;
+}
+.datosPrincipales1 {
+  grid-column: 1 / 2;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+
+.datosPrincipales2 {
+  grid-column: 2 / 3;
+  padding: 20px 40px;
+}
